--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="denied_external_storage_title">외부 저장소 사용에 대한 액세스 권한이 없습니다</string>
     <string name="move_to_setting_permission">앱 설정에서 액세스 권한을 수정할 수 있습니다. 앱 설정 화면으로 이동 하시겠습니까?</string>
 
+    <string name="mercy_copyright">Copyright © 2022 MERCY all rights reserved</string>
+
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
@@ -41,4 +43,5 @@
     <string name="attachment_title">Download incoming attachments</string>
     <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
 </resources>
