--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
     <string name="do_setting">설정하기</string>
+    <string name="do_start">시작하기</string>
 
     <string name="app_finish">뒤로 버튼을 한번 더 누르시면 앱이 종료됩니다.</string>
 
