--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
+    <string name="next">다음</string>
     <string name="do_setting">설정하기</string>
     <string name="do_start">시작하기</string>
 
