--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
     <string name="next">다음</string>
+    <string name="done">완료</string>
+    <string name="previous">이전</string>
     <string name="ignore">무시</string>
     <string name="do_setting">설정하기</string>
     <string name="do_start">시작하기</string>
@@ -66,9 +68,5 @@
     <string name="on_boarding_subtitle3">동영상 시청습관을 커스텀3</string>
 
     <string name="question_count">\u00A0of %d</string>
-
-    <string name="next">NEXT</string>
-    <string name="previous">PREVIOUS</string>
-    <string name="done">DONE</string>
 
 </resources>
