--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,6 @@
 
     <string name="question_count">\u00A0of %d</string>
 
+    <string name="format_selected_limit">%d개까지만 선택 가능합니다</string>
+
 </resources>
