--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,9 @@
     <string name="on_boarding_subtitle2">동영상 시청습관을 커스텀2</string>
     <string name="on_boarding_subtitle3">동영상 시청습관을 커스텀3</string>
 
+    <string name="welcome_hello">반가워요!</string>
+    <string name="welcome_explain">V.Clip을 이용하기 위해서는\n3가지 정보가 필요해요</string>
+
     <string name="question_count">\u00A0of %d</string>
 
     <string name="format_selected_limit">%d개까지만 선택 가능합니다</string>
