9-07a0 설문조사 완료 페이지 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,11 +67,16 @@
     <string name="on_boarding_subtitle2">동영상 시청습관을 커스텀2</string>
     <string name="on_boarding_subtitle3">동영상 시청습관을 커스텀3</string>
 
-    <string name="welcome_hello">반가워요!</string>
-    <string name="welcome_explain">V.Clip을 이용하기 위해서는\n3가지 정보가 필요해요</string>
-
     <string name="question_count">\u00A0of %d</string>
 
     <string name="format_selected_limit">%d개까지만 선택 가능합니다</string>
+
+    <string name="start_vclip">V.Clip 이용하기</string>
+
+    <string name="name_to">님</string>
+    <string name="welcome">환영합니다!</string>
+    <string name="welcome_hello">반가워요!</string>
+    <string name="welcome_need_information">V.Clip을 이용하기 위해서는\n3가지 정보가 필요해요</string>
+    <string name="welcome_description">나만의 동영상들로 Clip 해보세요!</string>
 
 </resources>
